# doc_utils

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/ddocs/: __init__.py  cli.py  markdown.py  markdown_to_latex.py  pandoc_utils.py  repo_cloner.py
src/ddocs/data/: deltares_fragment_template.tex  deltares_template.tex
tests/: conftest.py  test_markdown.py  test_repo_cloner.py  utils.py
tests/data/md_files/: cli.md  installation-zip-file.md
tests/data/references/: cli.tex  installation-zip-file.tex
